testsuite/tests/grammar/invalid_lexers/family_1.lkt
import common

lexer foo_lexer {
    family keywords {
        val bar = 1
    }
}
